day5-kubernetes/manifests/accounts/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: accounts-service
  namespace: accounts
spec:
  replicas: 3
  selector:
    matchLabels:
      app: accounts-service
  template:
    metadata:
      labels:
        app: accounts-service
    spec:
      containers:
        - name: accounts-service
          image: hashicorp/http-echo:1.0
          args:
            - "-text=Hello from accounts-service"
          ports:
            - containerPort: 5678
